--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -356,7 +356,7 @@ input {
     align-items: center;
 }
 
-.info__title,
+
 .info__subtitle {
     font-size: var(--small-font-size);
     color: var(--text-color);
@@ -374,9 +374,15 @@ input {
     font-weight: var(--font-medium);
 }
 
-.info__icon {
+.info__icon1 {
     font-size: 1.8rem;
-    color: var(--skin-color);
+    color: green;
+    margin-right: var(--mb-0-75);
+}
+
+.info__icon2 {
+    font-size: 1.8rem;
+    color: rgb(62, 101, 207);
     margin-right: var(--mb-0-75);
 }
 
